<resources>
    <string name="app_name">LDForm</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pref">Preference: </string>
    <string name="email">Email</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="rating">Rating: </string>
    <string name="submit">Submit</string>
</resources>
